--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- custom css -->
     <link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
@@ -78,46 +79,17 @@
     </nav>
     <!-- end of navbar -->
 
-    <!-- header -->
-    <header id="header" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#header" data-bs-slide-to="0" class="active" aria-current="true"
-                aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#header" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#header" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+    <!-- hero -->
+    <section id="hero">
+        <div class="hero-text-btn-wrapper">
+            <h2 class="text-capitalize py-2 fw-bold text-white">new arrivals</h2>
+            <a href="#" class="btn mt-3 text-uppercase">buy now</a>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active position-relative">
-                <img src="images/header1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block w-50">
-                    <h2 class="text-capitalize py-2 fw-bold text-white">best collection</h2>
-                    <a href="#" class="btn mt-3 text-uppercase">Check out</a>
-                </div>
-            </div>
-            <div class="carousel-item position-relative">
-                <img src="images/header2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block w-50">
-                    <h2 class="text-capitalize py-2 fw-bold text-white">best deals</h2>
-                    <a href="#" class="btn mt-3 text-uppercase">shop now</a>
-                </div>
-            </div>
-            <div class="carousel-item position-relative">
-                <img src="images/header3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block w-50">
-                    <h2 class="text-capitalize py-2 fw-bold text-white">new arrivals</h2>
-                    <a href="#" class="btn mt-3 text-uppercase">buy now</a>
-                </div>
-            </div>
+
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#header" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#header" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </header>
+
+    </section>
     <!-- end of header -->
 
     <!-- collection -->
@@ -850,11 +822,6 @@
 
 
 
-
-    <!-- jquery -->
-    <script src="js/jquery-3.6.0.js"></script>
-    <!-- isotope js -->
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
