--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class=" fw-lighter ms-2">iSHOP</span>
             </a>
 
-            <div class="order-lg-2 nav-btns d-flex align-items-center gap-4">
+            <div class="order-lg-2 nav-btns d-flex align-items-center gap-2 md:gap-4">
                 <button type="button" class=" position-relative d-block">
                     <i class="bi bi-cart4"></i>
                     <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">2</span>
