styling: minor styling

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <h2 class="position-relative d-inline-block">Limited Offer</h2>
             </div>
 
-            <div class="limited-offer row g-0">
+            <div class="limited-offer row  gx-0 gy-3">
                 <div class="col-md-6 col-lg-4 col-xl-3 p-2">
                     <div class="limited-offer position-relative overflow-hidden">
                         <img src="images/limited/1.jpg" class="w-100">
@@ -549,7 +549,7 @@
                 <h2 class="position-relative d-inline-block">Top Deal</h2>
             </div>
 
-            <div class="top-deal row g-0">
+            <div class="top-deal row gx-0 gy-3">
                 <div class="col-md-6 col-lg-4 col-xl-3 p-2">
                     <div class="top-deal-img position-relative overflow-hidden">
                         <img src="images/top deals/1.jpg" class="w-100">
@@ -618,7 +618,7 @@
 
             <div class="row g-3">
                 <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src="images/blog1.jpg" alt="">
+                    <img src="images/blog1.jpg" class="rounded-top" alt="">
                     <div class="card-body px-0">
                         <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
                         <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -636,7 +636,7 @@
                 </div>
 
                 <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src="images/blog2.jpg" alt="">
+                    <img src="images/blog2.jpg" class="rounded-top" alt="">
                     <div class="card-body px-0">
                         <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
                         <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -654,7 +654,7 @@
                 </div>
 
                 <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src="images/blog3.jpg" alt="">
+                    <img src="images/blog3.jpg" class="rounded-top" alt="">
                     <div class="card-body px-0">
                         <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
                         <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -680,7 +680,7 @@
         <div class="container">
             <div class="row gy-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-0">
-                    <img src="images/about.jpg" alt="" class="img-fluid">
+                    <img src="images/about.jpg" alt="" class="img-fluid rounded">
                 </div>
                 <div class="col-lg-6 order-lg-1 text-center text-lg-start">
                     <div class="title pt-3 pb-5">
@@ -727,7 +727,7 @@
         <div class="container">
             <div class="row text-white g-4">
                 <div class="col-md-6 col-lg-3">
-                    <a class="text-decoration-none brand text-white" href="index.html">iSHOP</a>
+                    <a class="text-decoration-none brand " href="index.html">iSHOP</a>
                     <p class="text-white text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit.
                         Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?
