--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 </head>
 
 <body>
-
+  
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg  py-2 fixed-top">
+    <nav class="navbar navbar-expand-lg  py-2">
         <div class="container">
-            <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
+             <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
                 <img src="images/shopping-cart.png" alt="site icon">
                 <span class=" fw-lighter ms-2">iSHOP</span>
             </a>
 
             <div class="order-lg-2 nav-btns d-flex align-items-center gap-2 md:gap-4">
-                <button type="button" class=" position-relative d-block">
+                <button type="button" class=" position-relative d-block" id="cartButton"  data-bs-toggle="modal" data-bs-target="#cartModal">
                     <i class="bi bi-cart4"></i>
                     <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">2</span>
                 </button>
@@ -76,7 +76,9 @@
                 </ul>
             </div>
         </div>
+           
     </nav>
+
     <!-- end of navbar -->
 
 
@@ -101,18 +103,18 @@
 
             <div class="row g-0">
                 <div class="d-flex flex-wrap justify-content-center mt-5 filter-button-group">
-                    <button type="button" class="btn m-2 text-dark active-filter-btn border-0" data-filter="*" id="all"
-                        onclick="myFunction()">All</button>
-                    <button type="button" onclick="myFunction1()" class="btn m-2 text-dark border-0"
-                        data-filter=".men">Men</button>
+                    <button type="button" class="btn m-2 text-dark active-filter-btn border-0"  id="all"
+                    onclick="filterItems('all')">All</button>
+                    <button type="button"  onclick="filterItems('men')" class="btn m-2 text-dark border-0"
+                        >Men</button>
                     <button type="button" class="btn m-2 text-dark border-0" data-filter=".women"
-                        onclick="myFunction2()">Women</button>
+                    onclick="filterItems('women')">Women</button>
 
-                    <button type="button" class="btn m-2 text-dark border-0 rounded-o" data-filter=".new">New
+                    <button type="button" class="btn m-2 text-dark border-0 rounded-o"   onclick="filterItems('new')">New
                         Arrival</button>
                 </div>
             </div>
-            <div class="collection-list mt-4 row gx-0 gy-3">
+            <div class="collection-list mt-4 row gx-0 gy-3" id="collection-list">
                 <div class="col-md-6 col-lg-4 col-xl-3 p-2 men">
                     <div class="collection-img position-relative">
                         <img src="images/men/1.jpg" class="w-100">
