--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </div>
 
             <div class="row g-0">
-                <div class="d-flex flex-wrap justify-content-center mt-5 filter-button-group">
-                    <button type="button" class="btn m-2 text-dark active-filter-btn border-0"  id="all"
+                <div class="d-flex flex-wrap justify-content-center mt-5">
+                    <button type="button" class="btn m-2 text-dark  border-0"  id="all"
                     onclick="filterItems('all')">All</button>
                     <button type="button"  onclick="filterItems('men')" class="btn m-2 text-dark border-0"
                         >Men</button>
